# acf-sdk

./: .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  pyproject.toml
acf_sdk/: __init__.py
api/: main.py  models.py  requirements.txt
config/: otel-collector.yaml  sidecar.example.yaml  sidecar.yaml
demo/: Dockerfile  README.md  docker-compose.yml  entrypoint.sh
docs/: crypto.md  detection_rate_report.md  implementation_log.md  mitre-atlas-analysis.md  observability.md  overview.md  phase2.md  phase3.md  pipeline.md  semantic-scanner.md
examples/: 01_allow.py  02_block_jailbreak.py  03_block_tool.py  04_rag_sanitise.py  05_evasion.py  06_non_strict.py  07_all_hooks.py  08_validate_block.py  README.md
scripts/: measure_detection_rate.py
sdk/python/: pyproject.toml
sdk/python/acf/: __init__.py  audit.py  firewall.py  frame.py  integration.py  models.py
sdk/python/acf/adapters/: langchain.py  langgraph.py
sdk/python/acf/benchmarks/: dataset.py  harness.py  run_benchmark.py
sdk/python/acf/scanners/: __init__.py  backends.py  models.py  semantic_scanner.py
sdk/python/acf/sdk_integration/: __init__.py  risk_context.py
sdk/python/tests/: test_adapters_langchain.py  test_adapters_langgraph.py  test_audit.py  test_firewall_semantic_scan.py  test_frame.py  test_integration.py  test_risk_context.py  test_semantic_scanner.py
sdk/python/tests/adapters/: test_langgraph.py
sidecar/: .dockerignore  Dockerfile  go.mod  go.sum
sidecar_core/: __init__.py  firewall_policy.yaml  policy_engine.py  risk_aggregator.py
tests/: test_benchmark.py  (+2 more)
(+77 files in other folders)
