[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "acf-sdk"
version = "0.1.0"
description = "Agentic Cognitive Firewall SDK — Python client"
requires-python = ">=3.10"
dependencies = []  # zero external dependencies — stdlib only

[project.optional-dependencies]
dev = ["pytest>=8"]
scanners = [
    "pydantic>=2.0",
    "numpy>=1.24",
    "sentence-transformers>=2.2",
    "scikit-learn>=1.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
